# actix-todo-list-app

./: .env  Cargo.toml
src/: main.rs
src/entity/: cache.rs  cache_locks.rs  failed_jobs.rs  job_batches.rs  jobs.rs  migrations.rs  mod.rs  password_reset_tokens.rs  sea_orm_active_enums.rs  sessions.rs  tasks.rs  todo.rs  todos.rs  users.rs
